[gd_scene load_steps=19 format=3 uid="uid://br56geqxpr1fg"]

[ext_resource type="PackedScene" uid="uid://d3caregm4htcf" path="res://scenes/levels/base_level.tscn" id="1_pb273"]
[ext_resource type="Script" path="res://scenes/levels/garbage/garbage.002.gd" id="2_1qw8i"]
[ext_resource type="TileSet" uid="uid://bb2jpr5ukmfal" path="res://assets/tilesets/prototype.tres" id="2_rglo6"]
[ext_resource type="Script" path="res://scenes/levels/room_transition_trigger.gd" id="3_fwyio"]
[ext_resource type="PackedScene" uid="uid://tjw1sq3hmc1e" path="res://entities/props/save.tscn" id="4_g0nfp"]
[ext_resource type="PackedScene" uid="uid://ki2ga45a5qj0" path="res://entities/props/lever.tscn" id="5_rpnrb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twh0r"]
size = Vector2(586, 52)

[sub_resource type="Gradient" id="Gradient_eupib"]
offsets = PackedFloat32Array(0.989418, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rd641"]
gradient = SubResource("Gradient_eupib")

[sub_resource type="Gradient" id="Gradient_g2t4n"]
offsets = PackedFloat32Array(0.989418, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p6w7f"]
gradient = SubResource("Gradient_g2t4n")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpko4"]
size = Vector2(513, 81)

[sub_resource type="Gradient" id="Gradient_mnnys"]
offsets = PackedFloat32Array(0, 0.989418)
colors = PackedColorArray(0.541176, 0, 0.627451, 1, 0.972549, 0.435294, 0.709804, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_f5idp"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bkqu5"]
color_ramp = SubResource("Gradient_mnnys")
noise = SubResource("FastNoiseLite_f5idp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pg57j"]
size = Vector2(530, 274)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0wcp"]
size = Vector2(560, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahs4f"]
size = Vector2(256, 260)

[node name="garbage_002" instance=ExtResource("1_pb273")]
script = ExtResource("2_1qw8i")
biome = "garbage"
id = "002"

[node name="tilemap" type="TileMap" parent="." index="0"]
tile_set = ExtResource("2_rglo6")
format = 2
layer_0/name = "bg"
layer_0/tile_data = PackedInt32Array(1114071, 0, 0, 1179607, 0, 0, 1245143, 0, 0, 1310679, 0, 0, 1114072, 0, 0, 1179608, 0, 0, 1245144, 0, 0, 1310680, 0, 0, 1114073, 0, 0, 1179609, 0, 0, 1245145, 0, 0, 1310681, 0, 0, 1114074, 0, 0, 1179610, 0, 0, 1245146, 0, 0, 1310682, 0, 0, 1114075, 0, 0, 1179611, 0, 0, 1245147, 0, 0, 1310683, 0, 0, 1114076, 0, 0, 1179612, 0, 0, 1245148, 0, 0, 1310684, 0, 0, 1114077, 0, 0, 1179613, 0, 0, 1245149, 0, 0, 1310685, 0, 0, 1114078, 0, 0, 1179614, 0, 0, 1245150, 0, 0, 1310686, 0, 0, 1114079, 0, 0, 1179615, 0, 0, 1245151, 0, 0, 1310687, 0, 0, 1376215, 0, 0, 1441751, 0, 0, 1507287, 0, 0, 1572823, 0, 0, 1638359, 0, 0, 1703895, 0, 0, 1769431, 0, 0, 1834967, 0, 0, 1900503, 0, 0, 1966039, 0, 0, 2031575, 0, 0, 2097111, 0, 0, 2162647, 0, 0, 2228183, 0, 0, 2293719, 0, 0, 2359255, 0, 0, 1376216, 0, 0, 1441752, 0, 0, 1507288, 0, 0, 1572824, 0, 0, 1638360, 0, 0, 1703896, 0, 0, 1769432, 0, 0, 1834968, 0, 0, 1900504, 0, 0, 1966040, 0, 0, 2031576, 0, 0, 2097112, 0, 0, 2162648, 0, 0, 2228184, 0, 0, 2293720, 0, 0, 2359256, 0, 0, 1376217, 0, 0, 1441753, 0, 0, 1507289, 0, 0, 1572825, 0, 0, 1638361, 0, 0, 1703897, 0, 0, 1769433, 0, 0, 1834969, 0, 0, 1900505, 0, 0, 1966041, 0, 0, 2031577, 0, 0, 2097113, 0, 0, 2162649, 0, 0, 2228185, 0, 0, 2293721, 0, 0, 2359257, 0, 0, 1376218, 0, 0, 1441754, 0, 0, 1507290, 0, 0, 1572826, 0, 0, 1638362, 0, 0, 1703898, 0, 0, 1769434, 0, 0, 1834970, 0, 0, 1900506, 0, 0, 1966042, 0, 0, 2031578, 0, 0, 2097114, 0, 0, 2162650, 0, 0, 2228186, 0, 0, 2293722, 0, 0, 2359258, 0, 0, 2424791, 0, 0, 2490327, 0, 0, 2424792, 0, 0, 2490328, 0, 0, 2424793, 0, 0, 2490329, 0, 0, 2424794, 0, 0, 2490330, 0, 0, 851936, 0, 0, 917472, 0, 0, 983008, 0, 0, 1048544, 0, 0, 1114080, 0, 0, 1179616, 0, 0, 1245152, 0, 0, 1310688, 0, 0, 851937, 0, 0, 917473, 0, 0, 983009, 0, 0, 1048545, 0, 0, 1114081, 0, 0, 1179617, 0, 0, 1245153, 0, 0, 1310689, 0, 0, 851938, 0, 0, 917474, 0, 0, 983010, 0, 0, 1048546, 0, 0, 1114082, 0, 0, 1179618, 0, 0, 1245154, 0, 0, 1310690, 0, 0, 851939, 0, 0, 917475, 0, 0, 983011, 0, 0, 1048547, 0, 0, 1114083, 0, 0, 1179619, 0, 0, 1245155, 0, 0, 1310691, 0, 0, 851940, 0, 0, 917476, 0, 0, 983012, 0, 0, 1048548, 0, 0, 1114084, 0, 0, 1179620, 0, 0, 1245156, 0, 0, 1310692, 0, 0, 851941, 0, 0, 917477, 0, 0, 983013, 0, 0, 1048549, 0, 0, 1114085, 0, 0, 1179621, 0, 0, 1245157, 0, 0, 1310693, 0, 0, 851942, 0, 0, 917478, 0, 0, 983014, 0, 0, 1048550, 0, 0, 1114086, 0, 0, 1179622, 0, 0, 1245158, 0, 0, 1310694, 0, 0, 851943, 0, 0, 917479, 0, 0, 983015, 0, 0, 1048551, 0, 0, 1114087, 0, 0, 1179623, 0, 0, 1245159, 0, 0, 1310695, 0, 0, 1114088, 0, 0, 1179624, 0, 0, 1245160, 0, 0, 1310696, 0, 0, 1114089, 0, 0, 1179625, 0, 0, 1245161, 0, 0, 1310697, 0, 0, 1114090, 0, 0, 1179626, 0, 0, 1245162, 0, 0, 1310698, 0, 0, 1114091, 0, 0, 1179627, 0, 0, 1245163, 0, 0, 1310699, 0, 0, 1114092, 0, 0, 1179628, 0, 0, 1245164, 0, 0, 1310700, 0, 0, 1114093, 0, 0, 1179629, 0, 0, 1245165, 0, 0, 1310701, 0, 0, 1114094, 0, 0, 1179630, 0, 0, 1245166, 0, 0, 1310702, 0, 0, 1114095, 0, 0, 1179631, 0, 0, 1245167, 0, 0, 1310703, 0, 0, 1114096, 0, 0, 1179632, 0, 0, 1245168, 0, 0, 1310704, 0, 0, 1114097, 0, 0, 1179633, 0, 0, 1245169, 0, 0, 1310705, 0, 0, 1114098, 0, 0, 1179634, 0, 0, 1245170, 0, 0, 1310706, 0, 0, 1114099, 0, 0, 1179635, 0, 0, 1245171, 0, 0, 1310707, 0, 0, 1114100, 0, 0, 1179636, 0, 0, 1245172, 0, 0, 1310708, 0, 0, 1114101, 0, 0, 1179637, 0, 0, 1245173, 0, 0, 1310709, 0, 0, 1114102, 0, 0, 1179638, 0, 0, 1245174, 0, 0, 1310710, 0, 0, 1114103, 0, 0, 1179639, 0, 0, 1245175, 0, 0, 1310711, 0, 0, 1376236, 0, 0, 1441772, 0, 0, 1507308, 0, 0, 1572844, 0, 0, 1376237, 0, 0, 1441773, 0, 0, 1507309, 0, 0, 1572845, 0, 0, 1376238, 0, 0, 1441774, 0, 0, 1507310, 0, 0, 1572846, 0, 0, 1376239, 0, 0, 1441775, 0, 0, 1507311, 0, 0, 1572847, 0, 0, 1638376, 0, 0, 1703912, 0, 0, 1769448, 0, 0, 1834984, 0, 0, 1900520, 0, 0, 1966056, 0, 0, 2031592, 0, 0, 2097128, 0, 0, 1638377, 0, 0, 1703913, 0, 0, 1769449, 0, 0, 1834985, 0, 0, 1900521, 0, 0, 1966057, 0, 0, 2031593, 0, 0, 2097129, 0, 0, 1638378, 0, 0, 1703914, 0, 0, 1769450, 0, 0, 1834986, 0, 0, 1900522, 0, 0, 1966058, 0, 0, 2031594, 0, 0, 2097130, 0, 0, 1638379, 0, 0, 1703915, 0, 0, 1769451, 0, 0, 1834987, 0, 0, 1900523, 0, 0, 1966059, 0, 0, 2031595, 0, 0, 2097131, 0, 0, 1638380, 0, 0, 1703916, 0, 0, 1769452, 0, 0, 1834988, 0, 0, 1900524, 0, 0, 1966060, 0, 0, 2031596, 0, 0, 2097132, 0, 0, 1638381, 0, 0, 1703917, 0, 0, 1769453, 0, 0, 1834989, 0, 0, 1900525, 0, 0, 1966061, 0, 0, 2031597, 0, 0, 2097133, 0, 0, 1638382, 0, 0, 1703918, 0, 0, 1769454, 0, 0, 1834990, 0, 0, 1900526, 0, 0, 1966062, 0, 0, 2031598, 0, 0, 2097134, 0, 0, 1638383, 0, 0, 1703919, 0, 0, 1769455, 0, 0, 1834991, 0, 0, 1900527, 0, 0, 1966063, 0, 0, 2031599, 0, 0, 2097135, 0, 0, 1638384, 0, 0, 1703920, 0, 0, 1769456, 0, 0, 1834992, 0, 0, 1900528, 0, 0, 1966064, 0, 0, 2031600, 0, 0, 2097136, 0, 0, 1638385, 0, 0, 1703921, 0, 0, 1769457, 0, 0, 1834993, 0, 0, 1900529, 0, 0, 1966065, 0, 0, 2031601, 0, 0, 2097137, 0, 0, 1638386, 0, 0, 1703922, 0, 0, 1769458, 0, 0, 1834994, 0, 0, 1900530, 0, 0, 1966066, 0, 0, 2031602, 0, 0, 2097138, 0, 0, 1638387, 0, 0, 1703923, 0, 0, 1769459, 0, 0, 1834995, 0, 0, 1900531, 0, 0, 1966067, 0, 0, 2031603, 0, 0, 2097139, 0, 0, 1114104, 0, 0, 1179640, 0, 0, 1245176, 0, 0, 1310712, 0, 0, 1114105, 0, 0, 1179641, 0, 0, 1245177, 0, 0, 1310713, 0, 0, 1114106, 0, 0, 1179642, 0, 0, 1245178, 0, 0, 1310714, 0, 0, 1114107, 0, 0, 1179643, 0, 0, 1245179, 0, 0, 1310715, 0, 0, 1114108, 0, 0, 1179644, 0, 0, 1245180, 0, 0, 1310716, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 524293, 0, 0, 589829, 0, 0, 524294, 0, 0, 589830, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 786431, 0, 0, 851967, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1048570, 0, 0, 983035, 0, 0, 1048569, 0, 0, 1048571, 0, 0, 262148, 0, 0, 327683, 0, 0, 393218, 0, 0, 458753, 0, 0, 524288, 0, 0, 655359, 0, 0, 720894, 0, 0, 786429, 0, 0, 851964, 0, 0, 917499, 0, 0, 983034, 0, 0, 1310717, 0, 0, 1245182, 0, 0, 1179647, 0, 0, 1048576, 0, 0, 983041, 0, 0, 917506, 0, 0, 851971, 0, 0, 786436, 0, 0, 720901, 0, 0, 655366, 0, 0, 589831, 0, 0, 524296, 0, 0, 917500, 0, 0, 983036, 0, 0, 1048572, 0, 0, 1048573, 0, 0, 983037, 0, 0, 917501, 0, 0, 851965, 0, 0, 851966, 0, 0, 786430, 0, 0, 917502, 0, 0, 983038, 0, 0, 1048574, 0, 0, 1114110, 0, 0, 1114109, 0, 0, 1179645, 0, 0, 1245181, 0, 0, 1179646, 0, 0, 983040, 0, 0, 851970, 0, 0, 720900, 0, 0, 655364, 0, 0, 655365, 0, 0, 720895, 0, 0, 524289, 0, 0, 458754, 0, 0, 393219, 0, 0, 524295, 0, 0, 1638388, 0, 0, 1703924, 0, 0, 1638389, 0, 0, 1638390, 0, 0, 1638391, 0, 0, 1703927, 0, 0, 1703926, 0, 0, 1703925, 0, 0, 1769461, 0, 0, 1769460, 0, 0, 1769462, 0, 0, 1769463, 0, 0, 1834999, 0, 0, 1834998, 0, 0, 1834997, 0, 0, 1900535, 0, 0, 1900534, 0, 0, 1900533, 0, 0, 1900532, 0, 0, 1834996, 0, 0, 1966068, 0, 0, 2031604, 0, 0, 2097140, 0, 0, 2097141, 0, 0, 2097142, 0, 0, 2097143, 0, 0, 2097144, 0, 0, 2097145, 0, 0, 2097146, 0, 0, 2097147, 0, 0, 2031611, 0, 0, 1966075, 0, 0, 1900539, 0, 0, 1835003, 0, 0, 1769467, 0, 0, 1703931, 0, 0, 1638395, 0, 0, 1638394, 0, 0, 1638393, 0, 0, 1638392, 0, 0, 1703928, 0, 0, 1703929, 0, 0, 1703930, 0, 0, 1769465, 0, 0, 1769464, 0, 0, 1769466, 0, 0, 1835001, 0, 0, 1835000, 0, 0, 1835002, 0, 0, 1900537, 0, 0, 1900536, 0, 0, 1966072, 0, 0, 1900538, 0, 0, 1966074, 0, 0, 2031610, 0, 0, 2031609, 0, 0, 2031608, 0, 0, 1966071, 0, 0, 1966070, 0, 0, 1966073, 0, 0, 1966069, 0, 0, 2031605, 0, 0, 2031606, 0, 0, 2031607, 0, 0)
layer_1/name = "env"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(1441776, 131072, 131072, 1507312, 131072, 131072, 1572848, 0, 131073, 1572849, 131072, 65536, 1572850, 131072, 65536, 1572851, 131072, 65536, 1572852, 131072, 65536, 2162676, 131072, 0, 2162675, 131072, 0, 2162674, 131072, 0, 2162673, 131072, 0, 2162672, 131072, 0, 2162671, 131072, 0, 2162670, 131072, 0, 2162669, 131072, 0, 2162668, 131072, 0, 1376235, 0, 1, 1441771, 131072, 196608, 1507307, 131072, 196608, 1572843, 0, 65537, 1572842, 131072, 65536, 1572841, 131072, 65536, 1572840, 131072, 65536, 1572839, 196608, 196608, 1638375, 131072, 196608, 1703911, 131072, 196608, 1769447, 131072, 196608, 1834983, 131072, 196608, 1900519, 131072, 196608, 1966055, 131072, 196608, 2031591, 131072, 196608, 2097127, 131072, 196608, 2162663, 196608, 65536, 2162664, 131072, 0, 2162665, 131072, 0, 2162666, 131072, 0, 2162667, 131072, 0, 1376234, 131072, 0, 1376233, 131072, 0, 1376232, 131072, 0, 1048559, 131072, 65536, 1048558, 131072, 65536, 1048557, 131072, 65536, 1048556, 131072, 65536, 1048555, 131072, 65536, 1048554, 131072, 65536, 1048553, 131072, 65536, 1048552, 0, 131073, 983016, 131072, 131072, 917480, 131072, 131072, 851944, 131072, 131072, 786408, 196608, 131072, 786407, 131072, 65536, 786406, 131072, 65536, 786405, 131072, 65536, 786404, 131072, 65536, 786403, 131072, 65536, 786402, 131072, 65536, 786401, 131072, 65536, 786400, 131072, 65536, 786399, 196608, 196608, 851935, 131072, 196608, 917471, 131072, 196608, 983007, 131072, 196608, 1048543, 0, 65537, 1114079, 131072, 196608, 1179615, 131072, 196608, 1245151, 131072, 196608, 1310687, 131072, 196608, 1376223, 131072, 0, 1376224, 131072, 0, 1376225, 131072, 0, 1376226, 131072, 0, 1376227, 131072, 0, 1376228, 131072, 0, 1376229, 131072, 0, 1376230, 131072, 0, 1376231, 131072, 0, 1376222, 131072, 0, 1376221, 131072, 0, 1376220, 131072, 0, 1376219, 0, 196609, 1048542, 131072, 65536, 1048541, 131072, 65536, 1048539, 131072, 65536, 1048540, 131072, 65536, 1048538, 131072, 65536, 1048537, 131072, 65536, 1048536, 131072, 65536, 1048535, 131072, 65536, 1048534, 196608, 196608, 1441755, 131072, 131072, 1507291, 131072, 131072, 1572827, 131072, 131072, 1638363, 131072, 131072, 1703899, 131072, 131072, 1769435, 131072, 131072, 1834971, 131072, 131072, 1900507, 131072, 131072, 1966043, 131072, 131072, 2031579, 131072, 131072, 2097115, 131072, 131072, 2162651, 131072, 131072, 2228187, 131072, 131072, 2293723, 131072, 131072, 2359259, 131072, 131072, 2424795, 131072, 131072, 2490331, 131072, 131072, 2490326, 131072, 196608, 2424790, 131072, 196608, 2359254, 131072, 196608, 2293718, 131072, 196608, 2228182, 131072, 196608, 2162646, 131072, 196608, 2097110, 131072, 196608, 1834966, 131072, 196608, 1900502, 131072, 196608, 1966038, 131072, 196608, 2031574, 131072, 196608, 1769430, 131072, 196608, 1703894, 131072, 196608, 1638358, 131072, 196608, 1572822, 131072, 196608, 1507286, 131072, 196608, 1441750, 131072, 196608, 1114070, 131072, 196608, 1179606, 131072, 196608, 1245142, 131072, 196608, 1310678, 131072, 196608, 1376214, 131072, 196608, 1048568, 0, 65537, 1376248, 131072, 0, 983033, 0, 65537, 1048569, 262144, 131072, 1376249, 131072, 0, 917498, 0, 65537, 983034, 262144, 131072, 1376250, 131072, 0, 851963, 0, 65537, 917499, 262144, 131072, 1376251, 131072, 0, 786428, 0, 65537, 851964, 262144, 131072, 1376252, 131072, 0, 720893, 0, 65537, 786429, 262144, 131072, 1310717, 262144, 65536, 1376253, 131072, 0, 655358, 0, 65537, 720894, 262144, 131072, 1245182, 262144, 65536, 1310718, 0, 196609, 589823, 0, 65537, 655359, 262144, 131072, 1179647, 262144, 65536, 1245183, 0, 196609, 458752, 0, 65537, 524288, 262144, 131072, 1048576, 262144, 65536, 1114112, 0, 196609, 393217, 0, 65537, 458753, 262144, 131072, 983041, 262144, 65536, 1048577, 0, 196609, 327682, 0, 65537, 393218, 262144, 131072, 917506, 262144, 65536, 983042, 0, 196609, 262147, 0, 65537, 327683, 262144, 131072, 851971, 262144, 65536, 917507, 0, 196609, 262148, 262144, 131072, 786436, 262144, 65536, 851972, 0, 196609, 196613, 131072, 65536, 720901, 262144, 65536, 786437, 0, 196609, 655366, 262144, 65536, 720902, 0, 196609, 589831, 262144, 65536, 655367, 0, 196609, 524296, 262144, 65536, 589832, 0, 196609, 524297, 0, 196609, 524298, 131072, 0, 524299, 131072, 0, 524300, 131072, 0, 1376241, 131072, 0, 1376242, 131072, 0, 1376243, 131072, 0, 1376244, 131072, 0, 1376245, 131072, 0, 1376246, 131072, 0, 1376247, 131072, 0, 1376240, 0, 196609, 1048560, 131072, 65536, 1048561, 131072, 65536, 1048562, 131072, 65536, 1048563, 131072, 65536, 1048564, 131072, 65536, 1048565, 131072, 65536, 1048566, 131072, 65536, 1048567, 131072, 65536, 196614, 131072, 65536, 196615, 131072, 65536, 196616, 131072, 65536, 524301, 131072, 0, 524302, 196608, 0, 458766, 131072, 131072, 393230, 131072, 131072, 327694, 131072, 131072, 262158, 131072, 131072, 196622, 131072, 131072, 131086, 131072, 131072, 65550, 131072, 131072, 14, 131072, 131072, 9, 131072, 196608, 65545, 131072, 196608, 131081, 131072, 196608, 196617, 0, 65537, 196612, 131072, 65536, 1638380, 0, 2, 1638381, 0, 2, 1638382, 0, 2, 1638383, 0, 2, 1769448, 0, 2, 1769449, 0, 2, 1769450, 0, 2, 1769451, 0, 2, 1769452, 0, 2, 1769453, 0, 2, 1900520, 0, 2, 1900521, 0, 2, 1900522, 0, 2, 2031592, 0, 2, 2031593, 0, 2, 2031594, 0, 2, 2555866, 0, 2, 2555865, 0, 2, 2555864, 0, 2, 2555863, 0, 2, 327693, 65536, 0, 1376218, 0, 2, 1376217, 0, 2, 1507288, 0, 2, 1507287, 0, 2, 1638361, 0, 2, 1638362, 0, 2, 1769432, 0, 2, 1769431, 0, 2, 1900505, 0, 2, 1900506, 0, 2, 2031576, 0, 2, 2031575, 0, 2, 2162649, 0, 2, 2162650, 0, 2, 2293720, 0, 2, 2293719, 0, 2, 2424793, 0, 2, 2424794, 0, 2, 2162677, 131072, 0, 2162678, 131072, 0, 2162679, 131072, 0, 2162680, 131072, 0, 2162681, 131072, 0, 2162682, 131072, 0, 2162683, 131072, 0, 2162684, 196608, 0, 2097148, 131072, 131072, 2031612, 131072, 131072, 1966076, 131072, 131072, 1900540, 131072, 131072, 1835004, 131072, 131072, 1769468, 131072, 131072, 1703932, 131072, 131072, 1638396, 131072, 131072, 1572853, 131072, 65536, 1572854, 131072, 65536, 1572855, 131072, 65536, 1572856, 131072, 65536, 1572857, 131072, 65536, 1572858, 131072, 65536, 1572859, 131072, 65536, 1572860, 196608, 131072, 1507310, 0, 2, 1507311, 0, 2, 65546, 65536, 65538, 65547, 65536, 65538, 196620, 0, 2, 196621, 0, 2, 327692, 65536, 65538, 393228, 65536, 0, 458763, 65536, 0, 458764, 65536, 0, 458765, 65536, 0, 393229, 65536, 0)
metadata/_edit_lock_ = true

[node name="initial" type="Marker2D" parent="spawnpoints" index="0"]
position = Vector2(-3520, 2490)

[node name="garbage_001" type="Marker2D" parent="spawnpoints" index="1"]
position = Vector2(1408, 127)

[node name="garbage_001" type="Area2D" parent="room_transitions" index="0"]
position = Vector2(1536, -24)
script = ExtResource("3_fwyio")
biome = "garbage"
roomId = "001"

[node name="shape" type="CollisionShape2D" parent="room_transitions/garbage_001" index="0"]
shape = SubResource("RectangleShape2D_twh0r")

[node name="save" parent="env" index="0" instance=ExtResource("4_g0nfp")]
position = Vector2(-3805, 2468)

[node name="lever" parent="env" index="1" instance=ExtResource("5_rpnrb")]
position = Vector2(-3316, 2548)

[node name="shadow" type="TextureRect" parent="env" index="2"]
z_index = 5
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -3277.0
offset_top = 4263.0
offset_right = -1629.0
offset_bottom = 4333.0
grow_horizontal = 2
rotation = -1.57079
scale = Vector2(1, 43.48)
texture = SubResource("GradientTexture1D_rd641")

[node name="shadow_hidden" type="TextureRect" parent="env" index="3"]
z_index = 5
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5793.0
offset_top = 1949.0
offset_right = -4145.0
offset_bottom = 2019.0
grow_horizontal = 2
scale = Vector2(1, 43.48)
texture = SubResource("GradientTexture1D_p6w7f")

[node name="static_body" type="StaticBody2D" parent="env" index="4"]
position = Vector2(-2047, 2561)
collision_mask = 134

[node name="shape" type="CollisionShape2D" parent="env/static_body" index="0"]
position = Vector2(-257, 39.5)
shape = SubResource("RectangleShape2D_kpko4")

[node name="rect" type="TextureRect" parent="env/static_body" index="1"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_bottom = 512.0
grow_horizontal = 0
scale = Vector2(1, 0.157521)
texture = SubResource("NoiseTexture2D_bkqu5")

[node name="destroy_shadow" type="Area2D" parent="env" index="5"]
position = Vector2(-4992, 4736)
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="env/destroy_shadow" index="0"]
shape = SubResource("RectangleShape2D_pg57j")

[node name="close_door" type="Area2D" parent="env" index="6"]
position = Vector2(-2304, 2944)
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="env/close_door" index="0"]
shape = SubResource("RectangleShape2D_d0wcp")

[node name="bossfight_over" type="Area2D" parent="env" index="7"]
position = Vector2(-2823, 3480)
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="env/bossfight_over" index="0"]
shape = SubResource("RectangleShape2D_ahs4f")

[node name="bg" type="ColorRect" parent="env/bossfight_over" index="1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -130.0
offset_right = 129.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.192157, 0, 0.521569)

[node name="label" type="Label" parent="env/bossfight_over" index="2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "bossfight over
debug trigger"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="interacted" from="env/lever" to="." method="_on_lever_interacted"]
[connection signal="body_entered" from="env/destroy_shadow" to="." method="_on_entered_from_armory"]
[connection signal="body_entered" from="env/close_door" to="." method="_on_boss_room_entered"]
[connection signal="body_entered" from="env/bossfight_over" to="." method="_on_bossfight_over" unbinds=1]
